[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/FLA-S.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/FLA-S/FLA-S.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/FLA-S/FLA-S_atacks.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/FLA-S/FLA-S_special.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/EnemyHealthUnder.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/EnemyHealth.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Shadow.png" type="Texture" id=7]

[sub_resource type="Animation" id=5]

resource_name = "Dead"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=11]

resource_name = "Down"
length = 8.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=7]

resource_name = "Idle"
length = 2.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]

resource_name = "Left"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=12]

resource_name = "PunchDown"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCollider:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackCollider/Shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]

resource_name = "PunchLeft"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCollider:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackCollider/Shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=13]

resource_name = "PunchRight"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCollider:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackCollider/Shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=14]

resource_name = "PunchUp"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackCollider:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackCollider/Shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=10]

resource_name = "Right"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=15]

resource_name = "Special"
length = 6.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]

resource_name = "Up"
length = 8.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[node name="FLA-S" type="KinematicBody2D" index="0" groups=[
"enemies",
]]

scale = Vector2( 0.75, 0.75 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Sprites" type="Node2D" parent="." index="0"]

[node name="1" type="Sprite" parent="Sprites" index="0"]

texture = ExtResource( 2 )
vframes = 6
hframes = 6
_sections_unfolded = [ "Animation", "Region" ]

[node name="2" type="Sprite" parent="Sprites" index="1"]

visible = false
texture = ExtResource( 3 )
vframes = 4
hframes = 6
frame = 17
_sections_unfolded = [ "Animation" ]

[node name="3" type="Sprite" parent="Sprites" index="2"]

visible = false
texture = ExtResource( 4 )
hframes = 6
_sections_unfolded = [ "Animation" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "Idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 8.0
anims/Dead = SubResource( 5 )
anims/Down = SubResource( 11 )
anims/Idle = SubResource( 7 )
anims/Left = SubResource( 8 )
anims/PunchDown = SubResource( 12 )
anims/PunchLeft = SubResource( 9 )
anims/PunchRight = SubResource( 13 )
anims/PunchUp = SubResource( 14 )
anims/Right = SubResource( 10 )
anims/Special = SubResource( 15 )
anims/Up = SubResource( 6 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Shape" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 2.17847, 81.0798 )
scale = Vector2( 3.03805, 1.8709 )
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -17.0
margin_top = -81.0
margin_right = 32.0
margin_bottom = -43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 5 )
texture_over = null
texture_progress = ExtResource( 6 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Textures", "Visibility" ]

[node name="Radar" type="Area2D" parent="." index="4"]

visible = false
position = Vector2( -19.0009, 19.9996 )
scale = Vector2( 11.125, 9.74999 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="Radar" index="0"]

position = Vector2( 0.0449384, -0.374246 )
scale = Vector2( 3.26707, 3.26707 )
shape = SubResource( 2 )

[node name="DamageCollider" type="Area2D" parent="." index="5"]

position = Vector2( 2.75243, -3.54688 )
scale = Vector2( 2.63763, 2.63763 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="DamageCollider" index="0"]

position = Vector2( 0.744134, 3.38981 )
scale = Vector2( 1.41907, 2.90764 )
shape = SubResource( 3 )

[node name="AttackCollider" type="Area2D" parent="." index="6"]

visible = false
position = Vector2( -193.282, 13.6386 )
scale = Vector2( 1.01744, 1.41204 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="Shape" type="CollisionShape2D" parent="AttackCollider" index="0"]

position = Vector2( 212.984, 4.76958 )
scale = Vector2( 12.5061, 9.32523 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite" type="Sprite" parent="." index="7"]

position = Vector2( 3.18462, 79.6088 )
scale = Vector2( 1.31099, 3.21623 )
z_index = -1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]

[connection signal="body_entered" from="Radar" to="." method="_on_Radar_body_entered"]

[connection signal="area_entered" from="AttackCollider" to="." method="_on_attack_hit"]


